Radio buttons tienen el mismo bug que tenian al principio los checkboxes que no se posicionan correctamente

--- a/Css/Sass/checkbox.sass
+++ b/Css/Sass/checkbox.sass
@@ -68,7 +68,6 @@ div.checkbox.disable
 			cursor: no-drop
 			border-color: lighten($gray, 25)
 
-
 div.checkbox.pulse 
 	span.pulse 
 		&:before 
@@ -92,18 +91,23 @@ div.checkbox.pulse
 
 div.cr.checkbox.variant
 	input[type="checkbox"]
+		outline: none 
+		border: none 
+
 		&:checked 
 			+ label
 				&:before 
 					transition: transform 0.3s ease-in-out
-					height: 12px
+					height: 10px
 					-webkit-transform: rotate(-405deg)
 					-ms-transform: rotate(-405deg)
 					transform: rotate(-405deg)
 					border-top: none !important 
-					border-right: none !important 
-					border-color: $accent
+					border-right: none !important
 					background: none !important
+				&:after 
+					display: none !important 
+
 
 	input[type="checkbox"]
 		&:not(:checked)
@@ -112,8 +116,9 @@ div.cr.checkbox.variant
 					border: 1.5px solid $gray
 					transition: transform 0.3s ease-out
 div.cr.radio-button
-	width: auto 
-	position: relative 
+	width: auto
+	padding: 5px 12px
+	position: relative
 	label 
 		font-family: 'Nunito', open-sans 
 		position: absolute 
@@ -130,14 +135,92 @@ div.cr.radio-button
 			top: 0
 			width: 18px
 			height: 18px
+			
+			-webkit-transition: background 0.3s ease-out, border-color 0.3s ease-out
+			-ms-transition: background 0.3s ease-out, border-color 0.3s ease-out
+			-moz-transition: background 0.3s ease-out, border-color 0.3s ease-out
+			transition: background 0.3s ease-out, border-color 0.3s ease-out
+
+		&:after 
+			content: ''
+			width: 12px
+			height: 12px 
+			position: absolute
+			box-sizing: border-box
+			border-radius: 100%
+			left: -13%
+			top: 15%
+			background: $white
+
+			-webkit-transform: scale(0)
+			-ms-transform: scale(0)
+			transform: scale(0) 
+
+			-webkit-transition: transform 0.3s ease-out 
+			-ms-transition: transform 0.3s ease-out 
+			-moz-transition: transform 0.3s ease-out 
+			transition: transform 0.3s ease-out
 
 	input[type="radio"]
-		margin-right: 15px
+		margin-right: 10px
+		opacity: 0 
 		z-index: 1
 		height: 20px 
 		position: relative
 		cursor: pointer
 	
+	input[type="radio"]
+		&:checked 
+			+ label 
+				&:after 
+					-webkit-transform: scale(0.7)
+					-ms-transform: scale(0.7)
+					transform: scale(0.7) 
+				&:before 
+					background: $accent
+					border-color: $accent
+
+
+div.cr.radio-button.variant 
+	input[type="radio"]
+		&:checked 
+			+ label 
+				&:after 
+					background: $accent 
+				&:before 
+					background: none !important 
+					border-color: $accent
+
+
+div.cr.radio-button.pulse 
+	span 
+		&:before 
+			content: ''
+			position: absolute 
+			background: rgba($accent, .4)
+			width: 15px
+			height: 15px 
+			left: 1.8% 
+			top: 2% 
+			border-radius: 100%
+			-webkit-transform: scale(0)
+			-ms-transform: scale(0)
+			transform: scale(0)
+
+			-webkit-transition: transform 0.4s ease-out, opacity 0.6s ease-out
+			-ms-transition: transform 0.4s ease-out, opacity 0.6s ease-out
+			transition: transform 0.4s ease-out, opacity 0.6s ease-out
+	
+	input[type="radio"]
+		&:checked
+			~ span.pulse
+				&:before  
+					-webkit-transform: scale(3)
+					-ms-transform: scale(3)
+					transform: scale(3)
+					opacity: 0
+
+
 
 
 
@@ -145,6 +228,4 @@ div.cr.radio-button
 
 
 	
-
-
 
