--- a/Css/Sass/checkbox.sass
+++ b/Css/Sass/checkbox.sass
@@ -3,7 +3,7 @@ div.cr.checkbox
 	padding: 5px 3px
 	position: relative
 	label
-		font-family: 'Nunito', open-sans !important
+		font-family: 'Nunito', open-sans 
 		position: absolute 
 		left: 0
 		top: 10%
@@ -115,26 +115,30 @@ div.cr.checkbox.variant
 				&:before 
 					border: 1.5px solid $gray
 					transition: transform 0.3s ease-out
+
+
+
+
 div.cr.radio-button
 	width: auto
-	padding: 5px 12px
+	padding: 5px 3px
 	position: relative
 	label 
 		font-family: 'Nunito', open-sans 
 		position: absolute 
-		left: 5% 
-		top: 0 
-		padding: 0 15px
+		left: 0
+		top: 10%
+		padding: 0 25px 
 		&:before 
 			content: ''
 			border: 1.5px solid $gray
 			box-sizing: border-box
 			border-radius: 100%
 			position: absolute
-			left: -15% 
+			left: 0 
 			top: 0
-			width: 18px
-			height: 18px
+			width: 20px
+			height: 20px
 			
 			-webkit-transition: background 0.3s ease-out, border-color 0.3s ease-out
 			-ms-transition: background 0.3s ease-out, border-color 0.3s ease-out
@@ -143,15 +147,15 @@ div.cr.radio-button
 
 		&:after 
 			content: ''
-			width: 12px
-			height: 12px 
-			position: absolute
 			box-sizing: border-box
+			position: absolute
+			
+			width: 14px
+			height: 14px 
 			border-radius: 100%
-			left: -13%
-			top: 15%
+			left: 2%
+			top: 12%
 			background: $white
-
 			-webkit-transform: scale(0)
 			-ms-transform: scale(0)
 			transform: scale(0) 
@@ -162,11 +166,14 @@ div.cr.radio-button
 			transition: transform 0.3s ease-out
 
 	input[type="radio"]
-		margin-right: 10px
-		opacity: 0 
+		opacity: 0
 		z-index: 1
 		height: 20px 
-		position: relative
+
+		position: absolute  
+		top: 0 
+		left: 0  
+		
 		cursor: pointer
 	
 	input[type="radio"]
