--- a/Css/main.css
+++ b/Css/main.css
@@ -794,7 +794,7 @@ div.cr.checkbox {
   padding: 5px 3px;
   position: relative; }
   div.cr.checkbox label {
-    font-family: "Nunito", open-sans !important;
+    font-family: "Nunito", open-sans;
     position: absolute;
     left: 0;
     top: 10%;
@@ -885,37 +885,37 @@ div.cr.checkbox.variant input[type="checkbox"]:not(:checked) + label:before {
 
 div.cr.radio-button {
   width: auto;
-  padding: 5px 12px;
+  padding: 5px 3px;
   position: relative; }
   div.cr.radio-button label {
     font-family: "Nunito", open-sans;
     position: absolute;
-    left: 5%;
-    top: 0;
-    padding: 0 15px; }
+    left: 0;
+    top: 10%;
+    padding: 0 25px; }
     div.cr.radio-button label:before {
       content: "";
       border: 1.5px solid #9E9E9E;
       box-sizing: border-box;
       border-radius: 100%;
       position: absolute;
-      left: -15%;
+      left: 0;
       top: 0;
-      width: 18px;
-      height: 18px;
+      width: 20px;
+      height: 20px;
       -webkit-transition: background 0.3s ease-out, border-color 0.3s ease-out;
       -ms-transition: background 0.3s ease-out, border-color 0.3s ease-out;
       -moz-transition: background 0.3s ease-out, border-color 0.3s ease-out;
       transition: background 0.3s ease-out, border-color 0.3s ease-out; }
     div.cr.radio-button label:after {
       content: "";
-      width: 12px;
-      height: 12px;
-      position: absolute;
       box-sizing: border-box;
+      position: absolute;
+      width: 14px;
+      height: 14px;
       border-radius: 100%;
-      left: -13%;
-      top: 15%;
+      left: 2%;
+      top: 12%;
       background: #fff;
       -webkit-transform: scale(0);
       -ms-transform: scale(0);
@@ -925,11 +925,12 @@ div.cr.radio-button {
       -moz-transition: transform 0.3s ease-out;
       transition: transform 0.3s ease-out; }
   div.cr.radio-button input[type="radio"] {
-    margin-right: 10px;
     opacity: 0;
     z-index: 1;
     height: 20px;
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
     cursor: pointer; }
   div.cr.radio-button input[type="radio"]:checked + label:after {
     -webkit-transform: scale(0.7);
