Terminado principalmente la mejora del codigo jquery de los snackbar e implementado la posibilidad de desplegar tu propia validacion en los material input, falta implementarla tambien en los input normales. Se agrego la clases rounded image y un contenedor de imagenes circular util para fotos de perfil

--- a/Css/Sass/buttons.sass
+++ b/Css/Sass/buttons.sass
@@ -439,7 +439,7 @@ button.cr.button.float
 button.dark-bg
 	box-shadow: none !important
 
-.cr.button.pulse
+div.cr.button.pulse, button.cr.button.pulse
 	overflow: hidden
 
 .ripple
