--- a/Css/Sass/cards.sass
+++ b/Css/Sass/cards.sass
@@ -8,6 +8,8 @@ div.cr.card
 	
 	width: 25.0rem
 	border-radius: 2px
+	margin: 10px auto 
+
 	min-width: 12.0rem
 	font-size: 16px
 	z-index: 1
@@ -205,25 +207,8 @@ div.cr.card.no-footer
 		border-bottom-right-radius: 2px
 		padding-bottom: 25px !important  
 	
-.cr.card.blue 
-	background: $blue 
-	color: $white
 
-.cr.card.pink 
-	background: $pink 
-	color: $white 
 
-.cr.card.green 
-	background: $green 
-	color: $white 
-
-.cr.card.indigo 
-	background: $indigo 
-	color: $white 
-
-.cr.card.amber 
-	background: darken($amber, 2)
-	color: darken($white, .5)
 
 .noraise
 		box-shadow: 0 1px 1px 0 rgba($gray, .6) !important
@@ -242,3 +227,4 @@ div.cr.card.adaptive
 	width: 100%
 @media screen and (max-width: 767px)
 	width: auto !important 
+
