--- a/Css/Sass/body.sass
+++ b/Css/Sass/body.sass
@@ -7,3 +7,22 @@ img.small
 img.medium 
 	max-width: 65% !important 
 	height: auto 
+
+
+div.circle-img-box
+	width: 50px 
+	height: 50px 
+	border-radius: 50% 
+	border: 1px solid $gray
+	box-sizing: border-box 
+	img
+		max-width: 100%
+
+div.circle-img-box.small 
+	width: 35px 
+	height: 35px 
+
+
+img.rounded 
+	border-radius: 50% 
+
