--- a/Css/Sass/snackbar.sass
+++ b/Css/Sass/snackbar.sass
@@ -20,7 +20,6 @@ div.cr.snackbar
 	
 	box-shadow: 0 2px 1px -1px $gray
 	
-	// bottom: 4%
 	margin-left: -80px
 	min-width: 250px
 	padding: 16px 
@@ -52,6 +51,13 @@ div.cr.snackbar
 			to 
 				bottom: -30px
 				opacity: 1
+	
+		@-ms-keyframes fadein 
+			from  
+				bottom: -60px 
+			to 
+				bottom: -30px 
+				opacity: 1 
 
 		@keyframes fadein
 			from
@@ -69,7 +75,14 @@ div.cr.snackbar
 			from
 				bottom: -60px
 			to 
-				bottom: -30ox
+				bottom: -30px
+				opacity: 1
+
+		@-ms-keyframes fadein 
+			from  
+				bottom: -60px 
+			to 
+				bottom: -30px
 				opacity: 1
 
 		@keyframes fadein
@@ -86,7 +99,6 @@ div.cr.snackbar
 		@-webkit-keyframes fadein 
 			from
 				bottom: 0
-				opacity: 0
 			to 
 				bottom: 30px
 				opacity: 1
@@ -97,17 +109,20 @@ div.cr.snackbar
 			to 
 				bottom: 30px
 				opacity: 1
-
-
-
 
 
 	@media screen and (min-width: 1200px)
 		bottom: 4%
+		@-ms-keyframes fadein 
+			from 
+				bottom: 0 
+			to 
+				bottom: 30px 
+				opacity: 1 
+
 		@-webkit-keyframes fadein 
 			from
 				bottom: 0
-				opacity: 0
 			to 
 				bottom: 30px
 				opacity: 1
@@ -118,8 +133,6 @@ div.cr.snackbar
 			to 
 				bottom: 30px
 				opacity: 1
-
-
 
 
 div.cr.snackbar.white 
