--- a/Css/Sass/inputs.sass
+++ b/Css/Sass/inputs.sass
@@ -123,28 +123,35 @@ div.cr.input.basic
 
 
 div.cr.input.label
-    margin: 4px 2px 10px 2px
     position: relative 
     white-space: nowrap
-    display: inline-block
+    margin: 10px auto
     input
+        position: relative
         left: -4px
-
     div.label
-        padding-top: 9.5px
+        position: relative 
+        top: 0
+        display: inline
+        overflow: hidden 
+
+        padding-top: 9.35px
         padding-left: 20px
-        padding-right: 18px
+        padding-right: 20px
+        padding-bottom: 9.15px
+
         background: lighten($gray, 30)
+        text-align: center 
+        min-width: 15px
+
         color: lighten($black, 30)
-        height: 31px
+        height: 22.5px
         border-top-left-radius: 2px
         border-bottom-left-radius: 2px
+        border-right: none !important 
         border: 0.5px solid lighten($gray, 20)
-        border-right: 0px
-        position: relative
-        display: inline-block
-        text-align: center
         font-weight: bold
+
 
     div.label.blue
         background: $blue 
@@ -186,42 +193,48 @@ div.cr.input.label
         border-right: 0px
 
     div.ender
-        position: absolute 
-        display: inline-block 
-        top: 0 
+        position: relative  
+        display: inline
+        top: 0
+        right: 0.7%
 
-
-        padding-top: 9.5px
+        padding-top: 9.52px
         padding-left: 20px
         padding-right: 18px
+        padding-bottom: 9.52px
 
-        left: 98.5%
         background: lighten($gray, 30)
         color: lighten($black, 30)
 
-        height: 31px
+        height: 22.2px
         border-top-right-radius: 2px
         border-bottom-right-radius: 2px
         border: 0.5px solid lighten($gray, 20)
 
-        border-left: 0px
+        border-left: none !important 
         text-align: center
         font-weight: bold
 
     button.ender
         
-        position: absolute
-        display: inline-block
+        position: relative
+        display: inline
+        top: 0 
+        right: 0.7%
         outline: none 
 
         text-decoration: none 
-        padding-left: 1.3rem
-        padding-right: 1.3rem
-
         font-size: 14px
-        top: 0
-        left: 98.5%
-        height: 42px
+
+        // padding-left: 1.3rem
+        // padding-right: 1.3rem
+
+        padding-top: 9.52px 
+        padding-left: 20px 
+        padding-right: 18px 
+        padding-bottom: 9.52px
+
+        height: 41.5px
         background: lighten($gray, 30)
         color: lighten($black, 30)
 
@@ -229,7 +242,7 @@ div.cr.input.label
         border-bottom-right-radius: 2px
         border: 0.5px solid lighten($gray, 20)
 
-        border-left: 0px
+        border-left: none 
         text-align: center
         font-weight: bold
 
@@ -518,6 +531,10 @@ div.cr.input.adaptive
     display: flex
     input
         width: $m-input-adaptive
+        left: 0 !important
+
+    div.ender, button.ender
+        right: 0 !important        
 
 // NO es necesario
 input.cr.input.error
